@@ -42,11 +42,10 @@ func (c *Crawler) Start(prospectorConfigs []config.ProspectorConfig, eventChan c
 		logp.Debug("prospector", "File Configs: %v", prospectorConfig.Paths)
 
 		prospector, err := NewProspector(prospectorConfig, c.Registrar, eventChan)
-		c.prospectors = append(c.prospectors, prospector)
-
 		if err != nil {
 			return fmt.Errorf("Error in initing prospector: %s", err)
 		}
+		c.prospectors = append(c.prospectors, prospector)
 	}
 
 	logp.Info("Loading Prospectors completed. Number of prospectors: %v", len(c.prospectors))
