@@ -1,10 +1,15 @@
 package main
 
 import (
+	"os"
+
 	"github.com/elastic/beats/libbeat/beat"
 	"github.com/elastic/beats/libbeat/mock"
 )
 
 func main() {
-	beat.Run(mock.Name, mock.Version, &mock.Mockbeat{})
+	err := beat.Run(mock.Name, mock.Version, &mock.Mockbeat{})
+	if err != nil {
+		os.Exit(1)
+	}
 }
